:white_check_mark: REST DOC Sign all API 추가 (#22)
* :white_check_mark: REST DOC Sign all API 추가

* :sparkles: test 해 .adoc 문법 자동 생성

* :recycle: request-fields 테이블 맨윗 줄 색상 적용

* :sparkles: rest doc 공통 부분 으로 autoDoc(path,error) 추가시 .adoc 생성 하는 메소드

* :sparkles: .gitignore .adoc 추가
index.adoc 제외

* :sparkles: add index.adoc

* :white_check_mark: smsService 페이크 객체 추가

* :recycle: idCheck response 추가

* :recycle: SmsService interface 로 추가

* :white_check_mark: 회원가입, 아이디 체크 , SMS 인증 번호 보내기 api test 추가

* :recycle: rest doc error 리펙토링

* :recycle: 문서 자동화 코드 리펙토링 및 패키징 정리

* :recycle: 인증 response 추가

* :recycle: error code 수정

* :recycle: 인증 코드 확인 response import

* :recycle: 인증 코드 확인 response import

* :white_check_mark: :sparkles: 인증 코드 sms,phone 체크 api 추가

* :sparkles: domain/index.adoc 인증 api 추가